# libbsc

./: CHANGES  CMakeLists.txt  bsc.cpp  makefile  makefile.cuda
libbsc/: libbsc.h
libbsc/bwt/libsais/: libsais.c
libbsc/coder/: coder.cpp
libbsc/lzp/: lzp.cpp
libbsc/platform/: platform.cpp  platform.h
